--- a/package.json
+++ b/package.json
@@ -9,20 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-navigation/native": "^7.1.9",
+    "@expo/vector-icons": "^14.1.0",
+    "@react-native-google-signin/google-signin": "^14.0.1",
+    "@react-navigation/native": "^7.1.10",
     "@react-navigation/stack": "^7.3.2",
     "expo": "~53.0.9",
+    "expo-linear-gradient": "~14.1.4",
+    "expo-router": "~5.0.7",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-country-picker-modal": "^2.0.0",
     "react-native-gesture-handler": "^2.25.0",
-    "react-native-reanimated": "^3.17.5",
-    "react-native-safe-area-context": "^5.4.0",
-    "react-native-screens": "^4.10.0",
+    "react-native-reanimated": "^3.18.0",
+    "react-native-safe-area-context": "^5.4.1",
+    "react-native-screens": "^4.11.1",
     "react-native-swiper": "^1.6.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@react-native-community/cli": "latest"
   },
   "private": true
 }
