--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
+    "@expo/webpack-config": "^19.0.1",
     "@react-native-google-signin/google-signin": "^14.0.1",
     "@react-navigation/native": "^7.1.10",
     "@react-navigation/stack": "^7.3.2",
@@ -18,13 +19,16 @@
     "expo-router": "~5.0.7",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-native": "0.79.2",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-gesture-handler": "^2.25.0",
+    "react-native-modal": "^14.0.0-rc.1",
     "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "^5.4.1",
     "react-native-screens": "^4.11.1",
-    "react-native-swiper": "^1.6.0"
+    "react-native-swiper": "^1.6.0",
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
