Frontend project of Lendrix app

--- a/app.json
+++ b/app.json
@@ -23,10 +23,22 @@
       "edgeToEdgeEnabled": true
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./app/assets/favicon.png"
     },
     "plugins": [
       "expo-router"
-    ]
+    ],
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "3b0786a0-f772-4891-be8c-18eb1559054c"
+      }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/3b0786a0-f772-4891-be8c-18eb1559054c"
+    }
   }
 }
